Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectTextObj.quorum
class Main
    action Main
        Text v
        v:SetValue(text)
        Test(v)
    end

    action Test(Object var)
        if var:GetValue() = text
            output "passed"
        end
    end
end
