Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjText.quorum
class Main
    action Main
        Text v
        v:SetValue(Test())
    end

    action Test() returns Text
        text var = "text"
        return var
    end
end